# sp-plugin-python

./: .gitignore  DEVELOPER_GUIDE.md  LICENSE  MANIFEST.in  README.md  _env_sample  env_sample  requirements.txt  setup.cfg  setup.py
doc/: sp_plugin_developer_guideline.md
src/conf/: shurjopay_plugin_test.py
src/plugin/: endpoints.py  models.py  shurjopay_config.py  shurjopay_plugin.py  test_shurjopay_plugin.py
src/plugin/model/: models.py
src/plugin/test/: test.py
src/shurjopay_plugin/: __init__.py  endpoints.py  logger_config.py  models.py  netwotk_interface.py  shurjopay_exceptions.py  shurjopay_plugin.py  shurjopay_status_codes.py  test_shurjopay_plugin.py  utils.py
src/shurjopay_plugin/sample_message/: PaymentDetails.json  VerifiedPaymentDetails.json
src/shurjopay_plugin/test/: PaymentRequest.json  TokenDetails.json  VerifiedPaymentDetails.json
src/tests/: VerifiedPaymentDetails.json  test.py
tests/: test_live_payment.py  test_models.py  test_shurjopay_plugin.py
tests/sample_message/: PaymentDetails.json  PaymentRequest.json  TokenDetails.json  VeriifiedPaymentDetails.json
