[metadata]
name = shurjopay
version = 0.0.1
author = Mahabubul Hasan
author_email = mahabubul@pranisheba.com.bd
description = Python plugin for Shurjopay V2
long_description = file: README.md
long_description_content_type = text/markdown
url = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = plugin
packages = find:
python_requires = >=3.7
include_package_data = True
[options.packages.find]
where = plugin
